# speaker-diarization-transcriber

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  speaker_diarization.py
output/: tmpwa1cyjsz_speaker_level_transcription.json  tmpwa1cyjsz_word_level_transcription.json
src/services/: audio_service.py  cache_service.py  cloud_storage_service.py  speech_to_text_service.py  transcription_service.py
src/utils/: file_utils.py
